fixed stepper bar shifting issue

--- a/pages/page-styles/processing_configuration.css
+++ b/pages/page-styles/processing_configuration.css
@@ -29,7 +29,7 @@ html, body {
     max-width: 1400px;
     margin: auto;
     padding: 0 24px;
-    margin-top: 58px;
+    margin-top: 68px;
 
 }
 
