--- a/pages/page-styles/score_scale.css
+++ b/pages/page-styles/score_scale.css
@@ -29,7 +29,7 @@ html, body {
     max-width: 1400px;
     margin: auto;
     padding: 0 24px;
-    margin-top: 64px;
+    margin-top: 70px;
 
 }
 
